inclido mais testes e nova url em base

--- a/pythonpro/Pipfile
+++ b/pythonpro/Pipfile
@@ -16,6 +16,8 @@ sentry-sdk = "*"
 django-ordered-model = "*"
 ipython = "*"
 django-extensions = "*"
+pytest-warnings = "*"
+pytest-django = "*"
 
 [dev-packages]
 "flake8" = "*"
